--- a/src/AuthExample/app/elements/elements.html
+++ b/src/AuthExample/app/elements/elements.html
@@ -26,10 +26,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-toolbar/paper-toolbar.html">
 <link rel="import" href="../bower_components/paper-button/paper-button.html">
 
-<!-- Configure your routes here -->
-<link rel="import" href="routing.html">
-
 <!-- Add your elements here -->
 <link rel="import" href="../styles/app-theme.html">
 <link rel="import" href="../styles/shared-styles.html">
 <link rel="import" href="auth-model/auth-model.html">
+<link rel="import" href="auth-app/auth-app.html">
+<link rel="import" href="home-page/home-page.html">
+<link rel="import" href="private-page/private-page.html">
+<link rel="import" href="public-page/public-page.html">
+<link rel="import" href="not-found-page/not-found-page.html">
