--- a/src/AuthExample/app/index.html
+++ b/src/AuthExample/app/index.html
@@ -59,106 +59,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <body unresolved>
   <span id="browser-sync-binding"></span>
   <template is="dom-bind" id="app">
-
-    <auth-model id="authModel"
-      client-id="fsXCZuroNA1uKX9uV1AbmPuDUSLkyh6s"
-      domain="blazejewicz.eu.auth0.com"
-      is-authenticated="{{authenticated}}"
-      user="{{user}}"
-      ></auth-model>
-
-    <paper-drawer-panel id="paperDrawerPanel">
-      <!-- Drawer Scroll Header Panel -->
-      <paper-scroll-header-panel drawer fixed>
-
-        <!-- Drawer Toolbar -->
-        <paper-toolbar id="drawerToolbar">
-          <span class="menu-name">Menu</span>
-        </paper-toolbar>
-
-        <!-- Drawer Content -->
-        <paper-menu attr-for-selected="data-route" selected="[[route]]">
-          <a data-route="home" href="{{baseUrl}}">
-            <iron-icon icon="home"></iron-icon>
-            <span>Home</span>
-          </a>
-
-          <a data-route="users" href="{{baseUrl}}public-route">
-            <span>Public Route</span>
-          </a>
-
-          <a data-route="contact" href="{{baseUrl}}private-route" hidden$="[[!authenticated]]">
-            <span>Private Route</span>
-          </a>
-        </paper-menu>
-      </paper-scroll-header-panel>
-
-      <!-- Main Area -->
-      <paper-scroll-header-panel main id="headerPanelMain" condenses keep-condensed-header>
-        <!-- Main Toolbar -->
-        <paper-toolbar id="mainToolbar" class="tall">
-          <paper-icon-button id="paperToggle" icon="menu" paper-drawer-toggle></paper-icon-button>
-
-          <span class="space"></span>
-
-          <!-- Application name -->
-          <div class="middle middle-container">
-            <div class="app-name">Polymer Starter Kit</div>
-          </div>
-
-          <!-- Application sub title -->
-          <div class="bottom bottom-container">
-            <div class="bottom-title">The future of the web today</div>
-          </div>
-        </paper-toolbar>
-
-        <!-- Main Content -->
-        <div class="content">
-          <iron-pages attr-for-selected="data-route" selected="{{route}}">
-            <section data-route="home">
-              <paper-material elevation="1">
-                <template is="dom-if" if={{user}}>
-                  <img src$="{{user.picture}}" >
-                  <h2>{{user.name}}</h2>
-                </template>
-                <paper-button on-tap="login" raised noink hidden$="[[authenticated]]">Log In</paper-button>
-                <paper-button on-tap="logout" raised noink hidden$="[[!authenticated]]">Log Out</paper-button>
-                <paper-button on-tap="getSecretThing" raised noink hidden$="[[!authenticated]]">Get Secret Thing</paper-button>
-                <h3 hidden$="[[!authenticated]]">{{secretThing}}</h3>
-                <paper-button on-tap="getDecodedJwt" raised noink hidden$="[[!authenticated]]">Get Decoded JWT</paper-button>
-                <pre hidden$="[[!authenticated]]">{{decodedJwt}}</pre>
-                <hr>
-                <a href="{{baseUrl}}public-route">Public Route</a>
-                <a href="{{baseUrl}}private-route" hidden$="[[!authenticated]]">Private Route</a>
-              </paper-material>
-
-            </section>
-
-            <section data-route="public-route">
-              <paper-material elevation="1">
-                <h2 class="page-title">Public Route</h2>
-                <p>This is public route</p>
-              </paper-material>
-            </section>
-
-            <section data-route="private-route">
-              <paper-material elevation="1">
-                <h2 class="page-title">Private Route</h2>
-                <p>This is private route</p>
-              </paper-material>
-            </section>
-
-          </iron-pages>
-        </div>
-      </paper-scroll-header-panel>
-    </paper-drawer-panel>
-
-    <paper-toast id="toast">
-      <span class="toast-hide-button" role="button" tabindex="0" onclick="app.$.toast.hide()">Ok</span>
-    </paper-toast>
-
+    <auth-app></auth-app>
   </template>
-
   <!-- build:js scripts/app.js -->
   <script src="scripts/app.js"></script>
   <!-- endbuild-->
